--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous" defer></script>
         <script src="index.js" defer></script>
+        <link rel="stylesheet" href="index.css">
         <title>Document</title>
     </head>
     <body>
