--- a/frontend/pages/products.html
+++ b/frontend/pages/products.html
@@ -7,12 +7,13 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous" defer></script>
         <script src="/frontend/components/navbar/loadNavbar.js" defer></script>
+        <script src="/frontend/scripts/products.js" defer></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <title>Products</title>
     </head>
     <body>
         <div id="navbarContainer"></div>
 
-        <a class="btn btn-primary" href="">Create new product</a>
+        <div id="productsContainer" class="container"></div>
     </body>
 </html>
