show errors for create product

--- a/frontend/pages/products.html
+++ b/frontend/pages/products.html
@@ -14,6 +14,10 @@
     <body>
         <div id="navbarContainer"></div>
 
+        <div class="d-flex justify-content-center">
+            <a class="btn btn-secondary mb-2" href="/frontend/pages/createProduct.html">Create a new product</a>
+        </div>
+
         <div id="productsContainer" class="container"></div>
     </body>
 </html>
